--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "@react-native-async-storage/async-storage": "^1.17.9",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-material/core": "^1.3.7",
+    "@react-native-picker/picker": "^2.4.4",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-element-dropdown": "^2.1.0",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-htmlview": "^0.16.0",
+    "react-native-pell-rich-editor": "^1.8.8",
     "react-native-reanimated": "^2.9.1",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
     "react-native-super-grid": "^4.4.3",
