--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@react-navigation/stack": "^6.2.2",
     "react": "18.0.0",
     "react-native": "0.69.4",
+    "react-native-autocomplete-search": "^1.0.8",
     "react-native-element-dropdown": "^2.1.0",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-htmlview": "^0.16.0",
+    "react-native-multiple-select": "^0.5.11",
     "react-native-pell-rich-editor": "^1.8.8",
     "react-native-reanimated": "^2.9.1",
     "react-native-render-html": "^6.3.4",
