feat: add bottom tab navigation and new screens (Feed & Notifications)
- Introduced FeedScreen and NotificationsScreen components with basic UI
- Integrated bottom tab navigation in Home.tsx using @react-navigation/bottom-tabs
- Enabled Register screen in AuthNavigator and updated navigation logic in RootNavigator
- Updated package.json with bottom-tabs and upgraded react-native-paper
- Fixed AppNavigator title and adjusted navigation authentication condition
- Added JSX config in tsconfig.json for React Native
- Updated settings.gradle to specify React plugin version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@react-native/typescript-config",
   "compilerOptions": {
-    "esModuleInterop": true
+    "jsx": "react-native",         // ✅ This tells TypeScript to compile JSX for React Native
+    "esModuleInterop": true        // ✅ Also needed for default imports like React
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["**/node_modules", "**/Pods"]
