--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native/new-app-screen": "0.82.1",
+    "@react-navigation/bottom-tabs": "^7.7.3",
     "@react-navigation/native-stack": "^7.6.2",
     "@react-navigation/stack": "^7.6.2",
     "react": "19.1.1",
     "react-native": "0.82.1",
     "react-native-gesture-handler": "^2.29.0",
-    "react-native-paper": "^4.12.5",
+    "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0"
   },
