--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -2,7 +2,7 @@ name: Build Android APK
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "2.0" ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
