--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@callstack/react-theme-provider": "^3.0.9",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-vector-icons/evil-icons": "^12.4.0",
+    "@react-native-vector-icons/fontawesome6": "^12.3.0",
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/bottom-tabs": "^7.7.3",
     "@react-navigation/native-stack": "^7.6.2",
