--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -23,7 +23,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       # ✅ Use Java 21 — fully compatible with RN 0.82+
       - name: Setup Java
